--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
- <center>
-    <img src="./assets/images/eab5bd896673c16277debfe3bac0b7c8.jpg" width="150" Height="220" alt="Photo">
- </center>
-<head>
-    <h1 align="center">DMYTRO IESTREMSKYI</h1>
 </head>
 <body>
+     <img src="./assets/images/4a2bdfc4-a209-446b-9699-8f282faac348.JPG" width="150" Height="220" alt="Photo">
+    <h1 align="center">DMYTRO IESTREMSKYI</h1>
+
 <p><center> Sales Manager | <a href=mailto:dimaestrem@gmail.com>dimaestrem@gmail.com</a> | <a href=tel:+1(587)573-9537>+1(587)573-9537</a> | Calgary, Alberta </center></p>
 
 <h2 align="center">
@@ -139,7 +137,5 @@
 </body>
 
 
-<body>
-    
-</body>
+
 </html>
