--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <title>Document</title>
 </head>
 <body>
-     <img src="./assets/images/4a2bdfc4-a209-446b-9699-8f282faac348.JPG" width="150" Height="220" alt="Photo">
-    <h1 align="center">DMYTRO IESTREMSKYI</h1>
+     <img src="./assets/images/4a2bdfc4-a209-446b-9699-8f282faac348.JPG" alt="Photo">
+    <h1>DMYTRO IESTREMSKYI</h1>
 
-<p><center> Sales Manager | <a href=mailto:dimaestrem@gmail.com>dimaestrem@gmail.com</a> | <a href=tel:+1(587)573-9537>+1(587)573-9537</a> | Calgary, Alberta </center></p>
+<p>Sales Manager | <a href=mailto:dimaestrem@gmail.com>dimaestrem@gmail.com</a> | <a href=tel:+1(587)573-9537>+1(587)573-9537</a> | Calgary, Alberta </p>
 
-<h2 align="center">
+<h2>
     Summary
 </h2>
-<p align="center">
+<p>
     Accomplished Sales Manager offering high performance leading development and implementation of superior sales strategy. Proven track record of identifying and creating profitable business opportunities, qualifying authentic prospects and cultivating strong partnerships. Demonstrated expertise in team leadership and development.
 </p>
-<h2 align="center">
+<h2>
     Skills
 </h2>
 <ul>
@@ -72,7 +72,7 @@
         </b>
     </li>
 </ul>
-<h2 align="center">Experience</h2>
+<h2>Experience</h2>
 <h3>Sales Manager</h3>
 <H3>TiSO Global</H3> 
 <h3>01/2019 to 01/2023</h3>
